--- a/css/scss/components/_faqs.scss
+++ b/css/scss/components/_faqs.scss
@@ -54,7 +54,7 @@ FAQs Page CSS Start
   }
   .accordion-body {
     background-color: transparent;
-    border: 1px solid $yellow-normal;
+    border: 2px solid #f5ecd4e0;
     border-top: 0;
     p {
       color: $dark-light;
