--- a/css/scss/components/_home.scss
+++ b/css/scss/components/_home.scss
@@ -119,6 +119,7 @@ Home Page CSS End
       }
     }
   }
+  //Location Section CSS End
 }
 
 //Medium Device CSS start
@@ -131,6 +132,7 @@ Home Page CSS End
       }
     }
   }
+  //Banner Section CSS End
 
   .location-section {
     .storage-unit {
@@ -169,6 +171,7 @@ Home Page CSS End
       padding: 20px 0;
     }
   }
+  //Location Section CSS End
 }
 
 //Small Device CSS start
@@ -185,6 +188,7 @@ Home Page CSS End
       }
     }
   }
+  //Banner Section CSS End
 }
 
 //Extra Small or Mobile Device CSS start
@@ -199,6 +203,7 @@ Home Page CSS End
       }
     }
   }
+  //Banner Section CSS End
 
   .location-section {
     .storage-unit {
@@ -231,6 +236,7 @@ Home Page CSS End
       padding: 20px 0;
     }
   }
+  //Location Section CSS End
 }
 
 /** ============================ Responsive CSS End ============================ **/
