--- a/css/scss/components/_nearby.scss
+++ b/css/scss/components/_nearby.scss
@@ -21,3 +21,19 @@ Nearby Page CSS Start
 /** ========================= 
 Nearby Page CSS End 
 ========================= **/
+
+/** ============================ Responsive CSS Start ============================ **/
+
+//Large Device CSS start
+@media (min-width: 0px) and (max-width: 1200px) {
+  .banner-section {
+    &.nearby-banner {
+      .banner-container {
+        min-height: 450px;
+      }
+    }
+  }
+  //Banner Section CSS End
+}
+
+/** ============================ Responsive CSS End ============================ **/
