--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -153,10 +153,6 @@ Unit Prices Page CSS Start
         }
       }
 
-      .common-pl {
-        padding-left: 20px;
-      }
-
       .store-size,
       .store-unit-details,
       .unit-price,
@@ -219,140 +215,141 @@ Unit Prices Page CSS Start
   h4 {
     font-weight: 700;
   }
+}
+/** == CTA CSS End == **/
 
-  .testimonial-modal {
-    .modal-dialog {
-      max-width: 570px;
-      .modal-content {
-        padding: 50px;
-        border-radius: 15px;
-        .modal-header {
-          padding: 0;
-          button {
-            @include click-focus(none, none, transparent, $gray-semi, "");
-            font-size: 26px;
-            cursor: pointer;
-            position: relative;
-            z-index: 10;
+.testimonial-modal {
+  .modal-dialog {
+    max-width: 570px;
+    .modal-content {
+      padding: 50px;
+      border-radius: 15px;
+      .modal-header {
+        padding: 0;
+        button {
+          @include click-focus(none, none, transparent, $gray-semi, "");
+          font-size: 26px;
+          cursor: pointer;
+          position: relative;
+          z-index: 10;
+        }
+      }
+      .modal-body {
+        padding: 0;
+        .rating {
+          margin-top: -25px;
+          p {
+            i {
+              font-size: 24px;
+              color: $yellow;
+            }
           }
         }
-        .modal-body {
-          padding: 0;
-          .rating {
-            margin-top: -25px;
-            p {
-              i {
-                font-size: 24px;
-                color: $yellow;
+        //Rating End
+
+        .contact-form {
+          .input-field {
+            label {
+              margin-top: 20px;
+              font-weight: 600;
+              color: $black;
+            }
+            input,
+            select,
+            textarea {
+              margin-top: 10px;
+              padding: 10px 20px;
+              width: 100%;
+              border-radius: 4px;
+              box-shadow: none;
+              @include click-focus(
+                1px solid #d9d9d9,
+                none,
+                transparent,
+                $gray-semi,
+                ""
+              );
+              option {
+                background-color: $blue;
+                padding: 20px 0;
+                color: white;
               }
             }
           }
-          //Rating End
 
-          .contact-form {
-            .input-field {
-              label {
-                margin-top: 20px;
-                font-weight: 600;
-                color: $black;
-              }
-              input,
-              select,
-              textarea {
-                margin-top: 10px;
-                padding: 10px 20px;
-                width: 100%;
-                border-radius: 4px;
-                box-shadow: none;
-                @include click-focus(
-                  1px solid #d9d9d9,
-                  none,
-                  transparent,
-                  $gray-semi,
-                  ""
-                );
-                option {
-                  background-color: $blue;
-                  padding: 20px 0;
-                  color: white;
-                }
+          body {
+            font-family: verdana;
+          }
+          .facility-option {
+            position: relative;
+            width: 100%;
+            margin: 0px auto;
+            .arrow {
+              display: inline-block;
+              width: 10px;
+              height: 10px;
+              border-right: 2px solid #d9d9d9;
+              border-top: 2px solid #d9d9d9;
+              transform: rotate(135deg);
+              position: absolute;
+              top: 17px;
+              z-index: 0;
+              right: 15px;
+              transition: all 0.5s ease;
+
+              &.rotate {
+                position: absolute;
+                top: 20px;
+                transform: rotate(-45deg);
               }
             }
-
-            body {
-              font-family: verdana;
-            }
-            .facility-option {
-              position: relative;
+            .custom-dropdown-value {
               width: 100%;
-              margin: 0px auto;
-              .arrow {
-                display: inline-block;
-                width: 10px;
-                height: 10px;
-                border-right: 2px solid #d9d9d9;
-                border-top: 2px solid #d9d9d9;
-                transform: rotate(135deg);
-                position: absolute;
-                top: 17px;
-                z-index: 0;
-                right: 20px;
-                transition: all 0.5s ease;
-
-                &.rotate {
-                  position: absolute;
-                  top: 20px;
-                  transform: rotate(-45deg);
-                }
-              }
-              .custom-dropdown-value {
-                width: 100%;
-                padding: 10px;
-                border: 1px solid #d9d9d9;
-                border-radius: 5px;
-                box-sizing: border-box;
-                cursor: pointer;
-                position: relative;
-                z-index: 1;
-              }
-              .custom-dropdown {
-                position: absolute;
-                width: 100%;
-                background-color: white;
-                list-style-type: none;
-                padding: 0;
-                margin: 0;
-                border: 1px solid #d9d9d9;
-                border-radius: 5px;
-                opacity: 0;
-                visibility: hidden;
-                li {
-                  a {
-                    display: block;
-                    padding: 10px;
-                    text-decoration: none;
-                    font-size: 14px;
-                    color: #444;
-                    transition: all 0.5s ease;
-                    &:hover {
-                      background-color: $blue;
-                      color: white;
-                    }
+              padding: 10px 35px 10px 10px;
+              border: 1px solid #d9d9d9;
+              border-radius: 5px;
+              box-sizing: border-box;
+              cursor: pointer;
+              position: relative;
+              z-index: 1;
+            }
+            .custom-dropdown {
+              position: absolute;
+              width: 100%;
+              background-color: white;
+              list-style-type: none;
+              padding: 0;
+              margin: 0;
+              border: 1px solid #d9d9d9;
+              border-radius: 5px;
+              opacity: 0;
+              visibility: hidden;
+              li {
+                a {
+                  display: block;
+                  padding: 10px;
+                  text-decoration: none;
+                  font-size: 14px;
+                  color: #444;
+                  transition: all 0.5s ease;
+                  &:hover {
+                    background-color: $blue;
+                    color: white;
                   }
                 }
+              }
 
-                &.open {
-                  opacity: 1;
-                  visibility: visible;
-                }
+              &.open {
+                opacity: 1;
+                visibility: visible;
               }
             }
+          }
 
-            .form-alert {
-              margin: 30px 0;
-              p {
-                font-size: 14px;
-              }
+          .form-alert {
+            margin: 30px 0;
+            p {
+              font-size: 14px;
             }
           }
         }
@@ -360,7 +357,82 @@ Unit Prices Page CSS Start
     }
   }
 }
+//Testimonial Modal End
 
+.call-modal {
+  .modal-dialog {
+    max-width: 744px;
+    .modal-content {
+      padding: 30px;
+      border-radius: 15px;
+      .modal-header {
+        padding: 0 10px 30px;
+        button {
+          @include click-focus(none, none, transparent, $gray-semi, "");
+          font-size: 26px;
+          cursor: pointer;
+          position: relative;
+          z-index: 10;
+        }
+      }
+      //Modal Header End
+
+      .modal-body {
+        padding: 20px 10px;
+        .selected-item {
+          margin: 30px 0;
+          padding: 10px 15px;
+          background-color: #ececec;
+          p {
+            font-size: 16px;
+          }
+          .selected-content {
+            display: flex;
+            align-items: center;
+            h5 {
+              padding-top: 15px;
+              padding-bottom: 15px;
+              margin-bottom: 0;
+              &.size {
+                color: $gray-semi;
+              }
+            }
+            &.one,
+            &.two {
+              position: relative;
+              &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 1px;
+                height: 100%;
+                background-color: $gray-semi;
+              }
+            }
+          }
+        }
+        .phone-number {
+          margin-top: 40px;
+        }
+      }
+      //Modal Body End
+
+      .modal-footer {
+        .modal-cta {
+          button {
+            background-color: $gray-normal;
+            &:hover {
+              background-color: $yellow;
+              color: $black;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+//Call Modal end
 /** == CTA CSS End == **/
 
 /** ========================= 
@@ -397,10 +469,6 @@ Unit Prices Page CSS End
               font-size: 16px;
             }
           }
-        }
-
-        .common-pl {
-          padding-left: 15px;
         }
       }
     }
@@ -451,10 +519,6 @@ Unit Prices Page CSS End
               font-size: 14px;
             }
           }
-        }
-
-        .common-pl {
-          padding-left: 15px;
         }
       }
     }
@@ -581,10 +645,6 @@ Unit Prices Page CSS End
           }
         }
         //CTA button css end
-
-        .common-pl {
-          padding-left: 0;
-        }
       }
     }
 
@@ -611,6 +671,139 @@ Unit Prices Page CSS End
     }
   }
   //Unit filter css end
+
+  .testimonial-modal {
+    .modal-dialog {
+      .modal-content {
+        padding: 20px;
+        .modal-body {
+          padding: 0;
+          .rating {
+            margin-top: -20px;
+            p {
+              i {
+                font-size: 20px;
+              }
+            }
+          }
+          //Rating End
+
+          .contact-form {
+            .input-field {
+              margin-top: 0;
+              label {
+                margin-top: 10px;
+                font-size: 14px;
+              }
+              input,
+              select,
+              textarea {
+                margin-top: 7px;
+                padding: 7px 15px;
+                option {
+                  padding: 15px 0;
+                }
+              }
+            }
+
+            .form-alert {
+              margin: 10px 0;
+              p {
+                font-size: 14px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  //Testimonial Modal End
+
+  .call-modal {
+    .modal-dialog {
+      .modal-content {
+        padding: 20px;
+        .modal-header {
+          padding: 0 10px 15px;
+        }
+        //Modal Header End
+
+        .modal-body {
+          padding: 15px 10px;
+          .selected-item {
+            margin: 15px 0;
+            padding: 10px;
+            p {
+              font-size: 14px;
+              &.common-pl {
+                padding-left: 0;
+              }
+            }
+            .selected-content {
+              h5 {
+                padding-top: 15px;
+                padding-bottom: 15px;
+                margin-bottom: 0;
+                &.common-pl {
+                  padding-left: 0;
+                }
+              }
+              .heading-size {
+                position: relative;
+                width: 100%;
+                display: block;
+                h5 {
+                  &.size {
+                    &::after {
+                      content: "";
+                      position: absolute;
+                      top: unset;
+                      right: unset;
+                      bottom: 10px;
+                      left: 0;
+                      width: 100%;
+                      height: 1px;
+                      background-color: $gray-border;
+                    }
+                  }
+                }
+              }
+
+              .price {
+                display: block;
+                width: 100%;
+                text-align: center;
+              }
+
+              &.one,
+              &.two {
+                position: relative;
+                &::after {
+                  content: "";
+                  position: absolute;
+                  top: 0;
+                  right: 0;
+                  width: 1px;
+                  height: 100%;
+                  background-color: $gray-semi;
+                }
+              }
+            }
+          }
+          .phone-number {
+            margin-top: 20px;
+          }
+        }
+        //Modal Body End
+      }
+    }
+  }
+  //Call Modal End
+
+  .checkout-cta-section {
+    padding: 50px 0;
+  }
+  // CTA CSS End
 }
 
 //Extra Small Device CSS start
