--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,14 @@ ul {
   padding-top: 50px;
   padding-bottom: 50px; }
 
+.common-pl {
+  padding-left: 20px; }
+
 .common-margin {
   margin-top: 20px; }
+
+.blue-color {
+  color: #0601ff; }
 
 /* Button CSS */
 .button {
@@ -244,6 +250,9 @@ main {
   p {
     font-size: 18px; }
 
+  .common-pl {
+    padding-left: 15px; }
+
   .common-margin {
     margin-top: 15px; }
 
@@ -293,7 +302,7 @@ main {
     font-size: 32px; }
 
   h4 {
-    font-size: 36px; }
+    font-size: 26px; }
 
   h5 {
     font-size: 22px; }
@@ -325,6 +334,9 @@ main {
     font-size: 14px; }
 
   h3 {
+    font-size: 20px; }
+
+  h4 {
     font-size: 20px; }
 
   h6 {
@@ -752,8 +764,6 @@ Unit Prices Page CSS Start
       .unit-filter-section .category-details .single-unit .call-btn a:hover {
         background-color: #f3b300;
         color: #0d0d0d; }
-    .unit-filter-section .category-details .single-unit .common-pl {
-      padding-left: 20px; }
     .unit-filter-section .category-details .single-unit .store-size,
     .unit-filter-section .category-details .single-unit .store-unit-details,
     .unit-filter-section .category-details .single-unit .unit-price,
@@ -797,112 +807,166 @@ Unit Prices Page CSS Start
   padding: 80px 0; }
   .checkout-cta-section h4 {
     font-weight: 700; }
-  .checkout-cta-section .testimonial-modal .modal-dialog {
-    max-width: 570px; }
-    .checkout-cta-section .testimonial-modal .modal-dialog .modal-content {
-      padding: 50px;
-      border-radius: 15px; }
-      .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-header {
-        padding: 0; }
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-header button {
-          border: none;
-          outline: none;
-          background-color: transparent;
-          color: #828282;
-          display: "";
-          font-size: 26px;
+
+/** == CTA CSS End == **/
+.testimonial-modal .modal-dialog {
+  max-width: 570px; }
+  .testimonial-modal .modal-dialog .modal-content {
+    padding: 50px;
+    border-radius: 15px; }
+    .testimonial-modal .modal-dialog .modal-content .modal-header {
+      padding: 0; }
+      .testimonial-modal .modal-dialog .modal-content .modal-header button {
+        border: none;
+        outline: none;
+        background-color: transparent;
+        color: #828282;
+        display: "";
+        font-size: 26px;
+        cursor: pointer;
+        position: relative;
+        z-index: 10; }
+    .testimonial-modal .modal-dialog .modal-content .modal-body {
+      padding: 0; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .rating {
+        margin-top: -25px; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .rating p i {
+          font-size: 24px;
+          color: #f3b300; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field label {
+        margin-top: 20px;
+        font-weight: 600;
+        color: #0d0d0d; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input,
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select,
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea {
+        margin-top: 10px;
+        padding: 10px 20px;
+        width: 100%;
+        border-radius: 4px;
+        box-shadow: none;
+        border: 1px solid #d9d9d9;
+        outline: none;
+        background-color: transparent;
+        color: #828282;
+        display: ""; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input option,
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select option,
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea option {
+          background-color: #0601ff;
+          padding: 20px 0;
+          color: white; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form body {
+        font-family: verdana; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option {
+        position: relative;
+        width: 100%;
+        margin: 0px auto; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .arrow {
+          display: inline-block;
+          width: 10px;
+          height: 10px;
+          border-right: 2px solid #d9d9d9;
+          border-top: 2px solid #d9d9d9;
+          transform: rotate(135deg);
+          position: absolute;
+          top: 17px;
+          z-index: 0;
+          right: 15px;
+          transition: all 0.5s ease; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .arrow.rotate {
+            position: absolute;
+            top: 20px;
+            transform: rotate(-45deg); }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown-value {
+          width: 100%;
+          padding: 10px 35px 10px 10px;
+          border: 1px solid #d9d9d9;
+          border-radius: 5px;
+          box-sizing: border-box;
           cursor: pointer;
           position: relative;
-          z-index: 10; }
-      .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body {
-        padding: 0; }
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .rating {
-          margin-top: -25px; }
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .rating p i {
-            font-size: 24px;
-            color: #f3b300; }
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field label {
-          margin-top: 20px;
-          font-weight: 600;
-          color: #0d0d0d; }
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input,
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select,
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea {
-          margin-top: 10px;
-          padding: 10px 20px;
+          z-index: 1; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown {
+          position: absolute;
           width: 100%;
-          border-radius: 4px;
-          box-shadow: none;
+          background-color: white;
+          list-style-type: none;
+          padding: 0;
+          margin: 0;
           border: 1px solid #d9d9d9;
-          outline: none;
-          background-color: transparent;
-          color: #828282;
-          display: ""; }
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input option,
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select option,
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea option {
-            background-color: #0601ff;
-            padding: 20px 0;
-            color: white; }
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form body {
-          font-family: verdana; }
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option {
-          position: relative;
-          width: 100%;
-          margin: 0px auto; }
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .arrow {
-            display: inline-block;
-            width: 10px;
-            height: 10px;
-            border-right: 2px solid #d9d9d9;
-            border-top: 2px solid #d9d9d9;
-            transform: rotate(135deg);
-            position: absolute;
-            top: 17px;
-            z-index: 0;
-            right: 20px;
-            transition: all 0.5s ease; }
-            .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .arrow.rotate {
-              position: absolute;
-              top: 20px;
-              transform: rotate(-45deg); }
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown-value {
-            width: 100%;
+          border-radius: 5px;
+          opacity: 0;
+          visibility: hidden; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown li a {
+            display: block;
             padding: 10px;
-            border: 1px solid #d9d9d9;
-            border-radius: 5px;
-            box-sizing: border-box;
-            cursor: pointer;
-            position: relative;
-            z-index: 1; }
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown {
-            position: absolute;
-            width: 100%;
-            background-color: white;
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            border: 1px solid #d9d9d9;
-            border-radius: 5px;
-            opacity: 0;
-            visibility: hidden; }
-            .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown li a {
-              display: block;
-              padding: 10px;
-              text-decoration: none;
-              font-size: 14px;
-              color: #444;
-              transition: all 0.5s ease; }
-              .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown li a:hover {
-                background-color: #0601ff;
-                color: white; }
-            .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown.open {
-              opacity: 1;
-              visibility: visible; }
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert {
-          margin: 30px 0; }
-          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert p {
-            font-size: 14px; }
+            text-decoration: none;
+            font-size: 14px;
+            color: #444;
+            transition: all 0.5s ease; }
+            .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown li a:hover {
+              background-color: #0601ff;
+              color: white; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown.open {
+            opacity: 1;
+            visibility: visible; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert {
+        margin: 30px 0; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert p {
+          font-size: 14px; }
+
+.call-modal .modal-dialog {
+  max-width: 744px; }
+  .call-modal .modal-dialog .modal-content {
+    padding: 30px;
+    border-radius: 15px; }
+    .call-modal .modal-dialog .modal-content .modal-header {
+      padding: 0 10px 30px; }
+      .call-modal .modal-dialog .modal-content .modal-header button {
+        border: none;
+        outline: none;
+        background-color: transparent;
+        color: #828282;
+        display: "";
+        font-size: 26px;
+        cursor: pointer;
+        position: relative;
+        z-index: 10; }
+    .call-modal .modal-dialog .modal-content .modal-body {
+      padding: 20px 10px; }
+      .call-modal .modal-dialog .modal-content .modal-body .selected-item {
+        margin: 30px 0;
+        padding: 10px 15px;
+        background-color: #ececec; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item p {
+          font-size: 16px; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content {
+          display: flex;
+          align-items: center; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5 {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            margin-bottom: 0; }
+            .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5.size {
+              color: #828282; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two {
+            position: relative; }
+            .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one::after, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two::after {
+              content: "";
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 1px;
+              height: 100%;
+              background-color: #828282; }
+      .call-modal .modal-dialog .modal-content .modal-body .phone-number {
+        margin-top: 40px; }
+    .call-modal .modal-dialog .modal-content .modal-footer .modal-cta button {
+      background-color: #9d9d9d; }
+      .call-modal .modal-dialog .modal-content .modal-footer .modal-cta button:hover {
+        background-color: #f3b300;
+        color: #0d0d0d; }
 
 /** == CTA CSS End == **/
 /** ========================= 
@@ -925,9 +989,7 @@ Unit Prices Page CSS End
       color: white;
       background-color: #9d9d9d; }
       .unit-filter-section .category-details .single-unit .call-btn a i {
-        font-size: 16px; }
-    .unit-filter-section .category-details .single-unit .common-pl {
-      padding-left: 15px; } }
+        font-size: 16px; } }
 @media (min-width: 0px) and (max-width: 992px) {
   .banner-section.unit-prices-banner .banner-container {
     min-height: 400px; }
@@ -952,8 +1014,6 @@ Unit Prices Page CSS End
         background-color: #9d9d9d; }
         .unit-filter-section .category-details .single-unit .call-btn a i {
           font-size: 14px; }
-      .unit-filter-section .category-details .single-unit .common-pl {
-        padding-left: 15px; }
   .unit-filter-section .category ul li a {
     padding-top: 8px;
     padding-bottom: 8px;
@@ -1029,8 +1089,6 @@ Unit Prices Page CSS End
           background-color: #9d9d9d; }
           .unit-filter-section .category-details .single-unit .call-btn a i {
             font-size: 16px; }
-      .unit-filter-section .category-details .single-unit .common-pl {
-        padding-left: 0; }
   .unit-filter-section .category ul {
     display: flex;
     overflow-x: auto;
@@ -1046,7 +1104,87 @@ Unit Prices Page CSS End
         padding-bottom: 5px;
         border-radius: 5px;
         font-size: 16px;
-        background-color: #f4f3ff; } }
+        background-color: #f4f3ff; }
+
+  .testimonial-modal .modal-dialog .modal-content {
+    padding: 20px; }
+    .testimonial-modal .modal-dialog .modal-content .modal-body {
+      padding: 0; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .rating {
+        margin-top: -20px; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .rating p i {
+          font-size: 20px; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field {
+        margin-top: 0; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field label {
+          margin-top: 10px;
+          font-size: 14px; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input,
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select,
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea {
+          margin-top: 7px;
+          padding: 7px 15px; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input option,
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select option,
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea option {
+            padding: 15px 0; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert {
+        margin: 10px 0; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert p {
+          font-size: 14px; }
+
+  .call-modal .modal-dialog .modal-content {
+    padding: 20px; }
+    .call-modal .modal-dialog .modal-content .modal-header {
+      padding: 0 10px 15px; }
+    .call-modal .modal-dialog .modal-content .modal-body {
+      padding: 15px 10px; }
+      .call-modal .modal-dialog .modal-content .modal-body .selected-item {
+        margin: 15px 0;
+        padding: 10px; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item p {
+          font-size: 14px; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item p.common-pl {
+            padding-left: 0; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5 {
+          padding-top: 15px;
+          padding-bottom: 15px;
+          margin-bottom: 0; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5.common-pl {
+            padding-left: 0; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .heading-size {
+          position: relative;
+          width: 100%;
+          display: block; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .heading-size h5.size::after {
+            content: "";
+            position: absolute;
+            top: unset;
+            right: unset;
+            bottom: 10px;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: #bfbfbf; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .price {
+          display: block;
+          width: 100%;
+          text-align: center; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two {
+          position: relative; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one::after, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 1px;
+            height: 100%;
+            background-color: #828282; }
+      .call-modal .modal-dialog .modal-content .modal-body .phone-number {
+        margin-top: 20px; }
+
+  .checkout-cta-section {
+    padding: 50px 0; } }
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section.unit-prices-banner .banner-container {
     min-height: 300px; }
