--- a/css/scss/components/_home.scss
+++ b/css/scss/components/_home.scss
@@ -63,6 +63,7 @@ Home Page CSS Start
     }
     .map-wrapper {
       position: relative;
+      width: 100%;
       .one {
         position: absolute;
         z-index: 0;
