--- a/css/scss/components/_size-guide.scss
+++ b/css/scss/components/_size-guide.scss
@@ -87,3 +87,218 @@ Size Guide Page CSS Start
 /** ========================= 
 Size Guide Page CSS End 
 ========================= **/
+
+/** ============================ Responsive CSS Start ============================ **/
+//Large Device CSS start
+@media (min-width: 0px) and (max-width: 1200px) {
+  .banner-section {
+    &.size-guide-banner {
+      .banner-container {
+        min-height: 450px;
+      }
+    }
+  }
+  //Banner Section CSS End
+}
+
+//Medium Device CSS start
+@media (min-width: 0px) and (max-width: 992px) {
+  .banner-section {
+    &.size-guide-banner {
+      .banner-container {
+        min-height: 400px;
+      }
+    }
+  }
+  //Banner Section CSS End
+
+  .storage-calculator-section {
+    padding-bottom: 50px;
+
+    .category-details {
+      .single-unit {
+        .wrapper {
+          padding: 15px 0;
+        }
+        .unit-price-count {
+          .price-count {
+            .plus-minus {
+              a {
+                i {
+                  font-size: 20px;
+                }
+              }
+            }
+            .input-count {
+              margin-left: 15px;
+              input {
+                width: 60px;
+                padding: 5px 10px;
+              }
+            }
+          }
+          .refresh {
+            font-size: 14px;
+            font-weight: 500;
+          }
+        }
+      }
+      //Unit heading css end
+      .bed-room-content {
+        padding: 40px 80px 20px;
+        border-top: 1px solid $gray-border;
+        border-left: 1px solid $gray-border;
+        border-right: 1px solid $gray-border;
+        h5 {
+          font-weight: 600;
+          color: $blue;
+        }
+        .bed-room-img {
+          margin: 20px 0;
+        }
+        .bed-dimension {
+          h4 {
+            color: $blue;
+          }
+        }
+        .bed-description {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+  // Storage Calculator Section CSS End
+}
+
+//Small Device CSS start
+@media (min-width: 0px) and (max-width: 768px) {
+  .banner-section {
+    &.size-guide-banner {
+      .banner-container {
+        min-height: 350px;
+      }
+    }
+  }
+  //Banner Section CSS End
+
+  .storage-calculator-section {
+    padding-bottom: 50px;
+
+    .category-details {
+      .single-unit {
+        .store-size {
+          display: block;
+          p {
+            &.common-pl {
+              padding-left: 0;
+            }
+
+            &.unit-details {
+              margin-top: 30px;
+            }
+          }
+
+          .size-title {
+            position: relative;
+            p {
+              &::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 1px;
+                left: 0;
+                bottom: -15px;
+                background-color: $gray-border;
+              }
+            }
+          }
+        }
+
+        .wrapper {
+          padding: 15px;
+        }
+
+        .unit-price-count {
+          .price-count {
+            .plus-minus {
+              padding-left: 0;
+              a {
+                i {
+                  font-size: 20px;
+                }
+              }
+            }
+            .input-count {
+              margin-left: 15px;
+              input {
+                width: 70px;
+                padding: 8px 10px;
+              }
+            }
+          }
+          .refresh {
+            margin-bottom: 30px;
+            font-size: 16px;
+            width: 100%;
+            display: block;
+            position: relative;
+            &::after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 1px;
+              left: 0;
+              bottom: -15px;
+              background-color: $gray-border;
+            }
+          }
+        }
+        .store-unit-details {
+          display: none !important;
+        }
+
+        &.last-unit {
+          border-bottom: 1px solid $gray-border;
+        }
+      }
+      //Unit heading css end
+      .bed-room-content {
+        margin: 0 15px;
+        padding: 30px 20px 30px;
+        border-top: 1px solid $gray-border;
+        border-left: 0;
+        border-right: 0;
+        border-bottom: 0;
+        h5 {
+          font-weight: 600;
+          color: $blue;
+        }
+        .bed-room-img {
+          margin: 20px 0;
+        }
+        .bed-dimension {
+          h4 {
+            color: $blue;
+          }
+        }
+        .bed-description {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+  // Storage Calculator Section CSS End
+}
+
+//Extra Small Device CSS start
+@media (min-width: 0px) and (max-width: 576px) {
+  .banner-section {
+    &.size-guide-banner {
+      .banner-container {
+        min-height: 300px;
+      }
+    }
+  }
+  //Banner Section CSS End
+}
+/** ============================ Responsive CSS Start ============================ **/
