--- a/css/scss/components/_pay-online.scss
+++ b/css/scss/components/_pay-online.scss
@@ -66,7 +66,7 @@ Pay Online Page CSS End
 //Large Device CSS start
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section {
-    &.nearby-banner {
+    &.pay-online-banner {
       .banner-container {
         min-height: 450px;
       }
