--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,8 @@ Home Page CSS Start
     .location-section .storage-unit .map-two-img img {
       border-radius: 12px; }
   .location-section .storage-unit .map-wrapper {
-    position: relative; }
+    position: relative;
+    width: 100%; }
     .location-section .storage-unit .map-wrapper .one {
       position: absolute;
       z-index: 0;
@@ -1089,6 +1090,8 @@ Unit Prices Page CSS End
           background-color: #9d9d9d; }
           .unit-filter-section .category-details .single-unit .call-btn a i {
             font-size: 16px; }
+      .unit-filter-section .category-details .single-unit.last-unit {
+        border-bottom: 1px solid #bfbfbf; }
   .unit-filter-section .category ul {
     display: flex;
     overflow-x: auto;
@@ -1278,6 +1281,113 @@ Size Guide Page CSS Start
 /** ========================= 
 Size Guide Page CSS End 
 ========================= **/
+/** ============================ Responsive CSS Start ============================ **/
+@media (min-width: 0px) and (max-width: 1200px) {
+  .banner-section.size-guide-banner .banner-container {
+    min-height: 450px; } }
+@media (min-width: 0px) and (max-width: 992px) {
+  .banner-section.size-guide-banner .banner-container {
+    min-height: 400px; }
+
+  .storage-calculator-section {
+    padding-bottom: 50px; }
+    .storage-calculator-section .category-details .single-unit .wrapper {
+      padding: 15px 0; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus a i {
+      font-size: 20px; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count {
+      margin-left: 15px; }
+      .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count input {
+        width: 60px;
+        padding: 5px 10px; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .refresh {
+      font-size: 14px;
+      font-weight: 500; }
+    .storage-calculator-section .category-details .bed-room-content {
+      padding: 40px 80px 20px;
+      border-top: 1px solid #bfbfbf;
+      border-left: 1px solid #bfbfbf;
+      border-right: 1px solid #bfbfbf; }
+      .storage-calculator-section .category-details .bed-room-content h5 {
+        font-weight: 600;
+        color: #0601ff; }
+      .storage-calculator-section .category-details .bed-room-content .bed-room-img {
+        margin: 20px 0; }
+      .storage-calculator-section .category-details .bed-room-content .bed-dimension h4 {
+        color: #0601ff; }
+      .storage-calculator-section .category-details .bed-room-content .bed-description {
+        margin-top: 20px; } }
+@media (min-width: 0px) and (max-width: 768px) {
+  .banner-section.size-guide-banner .banner-container {
+    min-height: 350px; }
+
+  .storage-calculator-section {
+    padding-bottom: 50px; }
+    .storage-calculator-section .category-details .single-unit .store-size {
+      display: block; }
+      .storage-calculator-section .category-details .single-unit .store-size p.common-pl {
+        padding-left: 0; }
+      .storage-calculator-section .category-details .single-unit .store-size p.unit-details {
+        margin-top: 30px; }
+      .storage-calculator-section .category-details .single-unit .store-size .size-title {
+        position: relative; }
+        .storage-calculator-section .category-details .single-unit .store-size .size-title p::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 1px;
+          left: 0;
+          bottom: -15px;
+          background-color: #bfbfbf; }
+    .storage-calculator-section .category-details .single-unit .wrapper {
+      padding: 15px; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus {
+      padding-left: 0; }
+      .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus a i {
+        font-size: 20px; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count {
+      margin-left: 15px; }
+      .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count input {
+        width: 70px;
+        padding: 8px 10px; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .refresh {
+      margin-bottom: 30px;
+      font-size: 16px;
+      width: 100%;
+      display: block;
+      position: relative; }
+      .storage-calculator-section .category-details .single-unit .unit-price-count .refresh::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: -15px;
+        background-color: #bfbfbf; }
+    .storage-calculator-section .category-details .single-unit .store-unit-details {
+      display: none !important; }
+    .storage-calculator-section .category-details .single-unit.last-unit {
+      border-bottom: 1px solid #bfbfbf; }
+    .storage-calculator-section .category-details .bed-room-content {
+      margin: 0 15px;
+      padding: 30px 20px 30px;
+      border-top: 1px solid #bfbfbf;
+      border-left: 0;
+      border-right: 0;
+      border-bottom: 0; }
+      .storage-calculator-section .category-details .bed-room-content h5 {
+        font-weight: 600;
+        color: #0601ff; }
+      .storage-calculator-section .category-details .bed-room-content .bed-room-img {
+        margin: 20px 0; }
+      .storage-calculator-section .category-details .bed-room-content .bed-dimension h4 {
+        color: #0601ff; }
+      .storage-calculator-section .category-details .bed-room-content .bed-description {
+        margin-top: 20px; } }
+@media (min-width: 0px) and (max-width: 576px) {
+  .banner-section.size-guide-banner .banner-container {
+    min-height: 300px; } }
+/** ============================ Responsive CSS Start ============================ **/
 /** ========================= 
 Nearby Page CSS Start 
 ========================= **/
@@ -1294,6 +1404,15 @@ Nearby Page CSS End
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section.nearby-banner .banner-container {
     min-height: 450px; } }
+@media (min-width: 0px) and (max-width: 992px) {
+  .banner-section.nearby-banner .banner-container {
+    min-height: 400px; } }
+@media (min-width: 0px) and (max-width: 768px) {
+  .banner-section.nearby-banner .banner-container {
+    min-height: 350px; } }
+@media (min-width: 0px) and (max-width: 576px) {
+  .banner-section.nearby-banner .banner-container {
+    min-height: 300px; } }
 /** ============================ Responsive CSS End ============================ **/
 /** ========================= 
 FAQs Page CSS Start 
@@ -1344,6 +1463,41 @@ FAQs Page CSS Start
 /** ========================= 
 FAQs Page CSS End 
 ========================= **/
+/** ============================ Responsive CSS Start ============================ **/
+@media (min-width: 0px) and (max-width: 1200px) {
+  .banner-section.faqs-banner .banner-container {
+    min-height: 450px; } }
+@media (min-width: 0px) and (max-width: 992px) {
+  .banner-section.faqs-banner .banner-container {
+    min-height: 400px; }
+
+  .faqs-section .accordion-item {
+    margin-bottom: 15px; }
+  .faqs-section .accordion-button {
+    font-size: 20px; } }
+@media (min-width: 0px) and (max-width: 768px) {
+  .banner-section.faqs-banner .banner-container {
+    min-height: 350px; }
+
+  .faqs-section .accordion-button {
+    font-size: 18px; }
+  .faqs-section .accordion-body p {
+    max-width: 100%; }
+
+  .accordion-flush .accordion-item .accordion-button {
+    box-shadow: none; }
+    .accordion-flush .accordion-item .accordion-button::after {
+      background-size: 16px; }
+
+  .accordion-flush .accordion-item .accordion-button:not(.collapsed)::after {
+    background-size: 16px; } }
+@media (min-width: 0px) and (max-width: 576px) {
+  .banner-section.faqs-banner .banner-container {
+    min-height: 300px; }
+
+  .faqs-section .accordion-button {
+    font-size: 16px; } }
+/** ============================ Responsive CSS End ============================ **/
 /** ========================= 
 Contact Us Page CSS Start 
 ========================= **/
@@ -1426,7 +1580,7 @@ Pay Online Page CSS End
 ========================= **/
 /** ============================ Responsive CSS Start ============================ **/
 @media (min-width: 0px) and (max-width: 1200px) {
-  .banner-section.nearby-banner .banner-container {
+  .banner-section.pay-online-banner .banner-container {
     min-height: 450px; } }
 /** ============================ Responsive CSS End ============================ **/
 /** ========================= 
