--- a/css/style.css
+++ b/css/style.css
@@ -1540,6 +1540,50 @@ Contact Us Page CSS Start
 /** ========================= 
 Contact Us Page CSS End 
 ========================= **/
+/** ============================ Responsive CSS Start ============================ **/
+@media (min-width: 0px) and (max-width: 1200px) {
+  .banner-section.nearby-banner .banner-container {
+    min-height: 450px; } }
+@media (min-width: 0px) and (max-width: 992px) {
+  .banner-section.nearby-banner .banner-container {
+    min-height: 400px; }
+
+  .contact-form-section .contact-form {
+    padding: 30px 15px;
+    margin-right: -50px; }
+    .contact-form-section .contact-form .form-section {
+      margin-top: 10px; }
+      .contact-form-section .contact-form .form-section .input-field label {
+        margin-top: 10px; }
+      .contact-form-section .contact-form .form-section .input-field input {
+        margin-top: 10px;
+        width: 90%;
+        padding: 8px; }
+      .contact-form-section .contact-form .form-section .submit-btn {
+        margin-top: 20px; }
+  .contact-form-section .contact-info {
+    padding: 30px 15px;
+    border-radius: 8px; } }
+@media (min-width: 0px) and (max-width: 768px) {
+  .banner-section.nearby-banner .banner-container {
+    min-height: 350px; }
+
+  .contact-form-section .contact-form {
+    margin-top: 30px;
+    padding: 30px 15px;
+    margin-right: 0;
+    border-radius: 8px; }
+    .contact-form-section .contact-form .form-section .input-field input {
+      width: 100%; }
+    .contact-form-section .contact-form .form-section .submit-btn {
+      margin-top: 20px; }
+  .contact-form-section .contact-info {
+    padding: 20px 15px;
+    border-radius: 8px; } }
+@media (min-width: 0px) and (max-width: 576px) {
+  .banner-section.nearby-banner .banner-container {
+    min-height: 300px; } }
+/** ============================ Responsive CSS End ============================ **/
 /** ========================= 
 Pay Online Page CSS Start 
 ========================= **/
